# ElementaryCellularAutomata

./: Cargo.toml  README.md
src/: automata.rs  main.rs
src/automaton/: components.rs  enums.rs  events.rs  mod.rs  resources.rs  systems.rs
src/text/: mod.rs
