[package]
name = "elementary-cellular-automaton"
version = "0.1.0"
edition = "2021"
authors = ["Nishant Dash <nishant.dash@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
rand = "0.8.3"
bevy-web-resizer = "2.0.0"

[profile.release]
lto = true
opt-level = 'z'